# metacognition_intervene

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
data/examples/: mc_intervene_policy_v2_sample_20.csv
data/mc_intervene_dataset_v1/: metadata.json
data/mc_intervene_policy_v2_1_dev/: DATASET_CARD.md  metadata.json
data/mc_intervene_policy_v2_smoke/: metadata.json
docs/: DATASET_CARD.md  OPERATORS.md  REPRODUCIBILITY.md  SCORING.md
outputs/eval_local_20260427_235822/: _run_summary.txt  deepseek-r1_32b.txt  gemma4_26b.txt  gemma4_31b.txt  mistral-small.txt  olmo2_13b.txt  qwen2.5_14b.txt  qwen3.5_27b.txt
outputs/eval_local_phase8_20260503_012558/: _run_summary.txt  deepseek-r1_32b.txt  gemma4_26b.txt  gemma4_31b.txt  mistral-small.txt  olmo2_13b.txt  qwen2.5_14b.txt  qwen3.5_27b.txt
outputs/eval_local_phase8_20260503_212137/: _run_summary.txt  deepseek-r1_32b.txt  gemma4_26b.txt  gemma4_31b.txt  mistral-small.txt  olmo2_13b.txt  qwen2.5_14b.txt  qwen3.5_27b.txt
outputs/phase8_report_20260503_212137/: phase8_summary.md  source_run.txt
reports/: phase8_frontier_lab_report.md
scripts/: audit_resolve_hint_cases.py  build_degenerate_ablation_table.py  build_iva_ablation_table.py  build_operator_report_tables.py  build_phase8_report_bundle.sh  build_phase8_tables.py  check_degenerate_thresholds.py  debug_policy_interventions.py  debug_policy_renderers.py  debug_policy_uncertainty.py  download_models.sh  eval_degenerate_policies.py  eval_local.py  rescore_eval_outputs.py  run_all_eval_local.sh  validate_dataset.py
src/mc_intervene/: cli.py  (+6 more)
(+23 files in other folders)
